Update README
* Add a version badge
* Add a link to the release on the plugin repository
* Add an elevator pitch
* Remove some setup steps no longer needed